--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -13,10 +13,9 @@
         font-size: 53px;
         margin: 0;
         font-family: 'Arial Narrow Bold', sans-serif;
-        font-weight: 400;
+        font-weight: 500;
 
         &::before {
-            content: '<h1>';
             font-family: 'Impact';
             color: #df0000;
             font-size: 18px;
@@ -27,7 +26,6 @@
         }
 
         &::after{
-            content: '<h1/>';
             font-family: 'Impact';
             color: #df0000;
             margin-top: 18px;
@@ -37,7 +35,41 @@
             opacity: 0.6;
         }
         img {
-            width: 32px;
+            width: 53px;
+            margin-left: 20px;
+            opacity: 0;
+            height: auto;
+            animation: rotateIn 1s linear both;
+            animation-delay: 1.4s;
+        }
+    }
+    h2{
+        color: #8d8d8d;
+        margin-top: 20px;
+        font-weight: 400px;
+        font-size: 11px;
+        font-family: sans-serif;
+        letter-spacing: 3px;
+        animation: fadeIn 1s 1.8s backwards;
+    }
+
+    .flat-button{
+        color: #df0000;
+        font-size: 13px;
+        font-weight: 400px;
+        font-family: sans-serif;
+        letter-spacing: 4px;
+        text-decoration: none;
+        padding: 10px 18px;
+        border: 1px solid #df0000;
+        margin-top: 25px;
+        float: left;
+        animation: fadeIn 1s 1.8s backwards;
+        white-space: nowrap;
+
+        &:hover{
+            background: #df0000;
+            color: #333;
         }
     }
 }
